--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       gtag('config', 'UA-197345597-1');
     </script>
     <script src="js/my.js"></script>
-    <title>ADA SEDEF YAPI</title>
+    <title>ADA SEDEF YAPI ANASAYFA</title>
 </head>
 <body>
 
