--- a/pages/cebeci5.html
+++ b/pages/cebeci5.html
@@ -151,21 +151,19 @@
 
 
         <div class="exp">
-            <p>“Gürültü ve Hava Kirliliğinin Olmadığı, Deniz ile Doğanın El Ele Tutuştuğu, Rahat, Huzurlu Bir Ortamda,
-                Konfor ve Estetiğin Buluştuğu Bir Site ile Yeni Projemize Başlıyoruz.” </br></br>
-                “Mavi Bayraklı Pırıl Pırıl Denizi, Uzun ve Şifalı Kumsalları, Yemyeşil Doğası, En Sıcak Bunaltıcı
-                Günlerde Bile Ferahlatıcı Deniz ve Orman Havası, Eşsiz Gün Batımı ile Ruhunuza İyi Gelecek.”</br></br>
-                “Bedeninizi Dinlendirecek, Yılın Birikmiş Bütün Stresini Atacağınız, Büyüleyici Bir Ortamda, Huzurlu
-                Rahat Ve Konforlu Tatil Yapabileceğiniz Bu Projeye Sizleride Bekliyoruz.”</p>
+            <p>“Projemiz Kocaeli Kandıra Cebeci, 132 ada, 7 parsel konumlu olup sahile 400 metre mesafededir.” </br></br>
+                “2059m<sup>2</sup> toplam arazi üzerine projelendirilmiş, çift tarafı yol cepheli ve sahile yakındır.”</br></br>
+                “Mavi bayraklı pırıl pırıl denizi, uzun ve şifalı kumsalları, yemyeşil doğası, en sıcak bunaltıcı günlerde bile ferahlatıcı deniz ve orman havası eşsiz gün batımı ile ruhunuza iyi gelecek.”</br></br>
+                “Gürültü ve Hava Kirliliğinin Olmadığı, Deniz ile Doğanın Buluştuğu, Rahat, Huzurlu Bir Ortamda, Konfor ve Estetiğin Harmanlandığı Bir Site ile Yeni Projemiz Cebeci 5'e başlıyoruz.”</p>
         </div>
 
         <div class="list">
             <div class="partA">
-                <h2>2 BLOK, 10 DAİREDEN OLUŞAN PROJEMİZDE</h2>
+                <h2>2 BLOK, 20 DAİREDEN OLUŞAN PROJEMİZDE</h2>
                 <ul>
-                    <li>4 Adet 114 M<sup>2</sup> Dubleks Daire </li>
-                    <li>4 Adet 80 M<sup>2</sup> Daire</li>
-                    <li>2 Adet 95 M<sup>2</sup> Dubleks Daire</li>
+                    <li>8 Adet 80 M<sup>2</sup> (Brüt) 2+1 Daire </li>
+                    <li>8 Adet 114 M<sup>2</sup> (Brüt) 3+1 Dublex Daire </li>
+                    <li>4 Adet 95 M<sup>2</sup> (Brüt) Dublex Daire</li>
 
                 </ul>
             </div>
@@ -173,7 +171,7 @@
             <div class="partA">
                 <h2>SİTE İMKANLARI</h2>
                 <ul>
-                    <li>MAVİ BAYRAKLI CEBECİ PLAJINA 150 M UZAKLIKTADIR</li>
+                    <li>MAVİ BAYRAKLI CEBECİ PLAJINA 400 M UZAKLIKTADIR</li>
                     <li>ETRAFI DOĞAL YEŞİL ALAN İLE ÇEVRİLİDİR</li>
                     <li>İSTANBUL'A 95 KM</li>
                     <li>KOCAELİ'YE 35 KM</li>
@@ -192,21 +190,43 @@
             <div class="partC">
                 <h2>KONUM </h2>
                 <div class="productPartC">
-                    <img src="../images/cebeci4/C4-konum.jpg" alt="">
+                    <img src="../images/cebeci5/C5-konum.jpg" alt="">
                 </div>
             </div>
 
             <div class="partD">
                 <h2><span> KAT PLANLARI</span> </h2>
                 <div class="productPartD">
-                    <img src="../images/cebeci4/KAT PLANLARI/A1-A2 BLOK 1. KAT.jpg" alt="">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT1.png" alt="">
                 </div>
                 <div class="productPartD">
-                    <img src="../images/cebeci4/KAT PLANLARI/A1-A2 BLOK ZEMİN KAT.jpg" alt="">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT2.png" alt="">
                 </div>
                 <div class="productPartD">
-                    <img src="../images/cebeci4/KAT PLANLARI/A1-A2 BLOK ÇATI KATI.jpg" alt="">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT3.png" alt="">
                 </div>
+                <div class="productPartD">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT4.png" alt="">
+                </div>
+                <div class="productPartD">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT5.png" alt="">
+                </div>
+                <div class="productPartD">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT6.png" alt="">
+                </div>
+                <div class="productPartD">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT7.png" alt="">
+                </div>
+                <div class="productPartD">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT8.png" alt="">
+                </div>
+                <div class="productPartD">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT9.png" alt="">
+                </div>
+                <div class="productPartD">
+                    <img src="../images/cebeci5/KAT PLANLARI/C5-KAT10.png" alt="">
+                </div>
+
             </div>
         </div>
 
