projeler sayfasına cebeci 5 eklendi

--- a/pages/project.html
+++ b/pages/project.html
@@ -116,6 +116,17 @@
                     </div>
                 </div>
 
+                <div class="projectView">
+                    <div class="projectImage">
+                        <img src="../images/cebeci5/C5-27.jpg" alt="Project">
+                    </div>
+                    <div class="projectContent">
+                        <h1>5</h1>
+                        <h2>CEBECİ TATİL SİTESİ 5</h2>
+                        <button onclick="window.location.href='cebeci5.html'">PROJEYE BAK</button>
+                    </div>
+                </div>
+
 
             </div>
         </div>
